--- a/src/components/add/add.module.css
+++ b/src/components/add/add.module.css
@@ -3,5 +3,11 @@
 }
 
 .head {
-  font-size: 32px;
+  background-color: #ababab;
+  color: white;
+  font-size: 24px;
+}
+
+.addField {
+  background-color: #ababab;
 }
