--- a/src/components/add/add.module.css
+++ b/src/components/add/add.module.css
@@ -11,3 +11,11 @@
 .addField {
   background-color: #ababab;
 }
+
+.domain input {
+  border: 0px !important;
+}
+
+.add {
+  background-color: #4285f4;
+}
