--update:ui changes

--- a/src/components/homepage/homepage.module.css
+++ b/src/components/homepage/homepage.module.css
@@ -14,11 +14,15 @@
 }
 
 .cardEdit {
-  font-size: 20px;
   border-radius: 8px;
 }
 
+.crdTxt {
+  font-size: 20px;
+}
+
 .sideHead {
+  font-size: 20px;
   font-weight: 600;
 }
 
@@ -26,11 +30,11 @@
   font-size: 10px;
   font-weight: 600;
 }
+.sideFooter {
+  margin-top: 160px;
+}
 
 @media (max-width: 575.98px) {
-  .sideFooter {
-    display: none;
-  }
   .filter {
     display: none;
   }
