--- a/src/index.css
+++ b/src/index.css
@@ -30,12 +30,20 @@ body {
 
 .card {
   border: 0;
+  box-shadow: 0px 4px 16px #d0cde1;
 }
 
 .btn:focus,
 .btn:active {
   outline: none !important;
   box-shadow: none !important;
+}
+
+.btn {
+  border: 0;
+}
+.btn:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 input:focus,
