--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 
 .card {
   border: 0;
-  box-shadow: 0px 4px 16px #d0cde1;
+  /* box-shadow: 0px 4px 16px #d0cde1; */
 }
 
 .btn:focus,
@@ -51,4 +51,13 @@ input:active {
   outline: none !important;
   box-shadow: none !important;
   /* border: 2px solid #348afc !important; */
+}
+
+/* .modal-content {
+  height: 600px !important;
+  width: 800px !important;
+} */
+
+.navSm {
+  display: none;
 }
