--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,33 @@
-@font-face {
-  font-family: GoogleSansBd;
-  src: url("./assets/fonts/GoogleSans-Bold.ttf");
-}
-
-@font-face {
-  font-family: GoogleSansRg;
-  src: url("./assets/fonts/GoogleSans-Regular.ttf");
-}
-
-@font-face {
-  font-family: GoogleSansMd;
-  src: url("./assets/fonts/GoogleSans-Medium.ttf");
-}
-
 body {
-  overflow-x: hidden !important;
-  font-family: GoogleSansRg;
-  background-color: #f1f1f1;
+	overflow-x: hidden !important;
+	background-color: #f1f1f1;
 }
-
-/* .fluid-container {
-  width: 100%;
-  align-items: center;
-}
-
-.container {
-  margin: 0 100px !important;
-} */
 
 .card {
-  border: 0;
-  box-shadow: 0px 4px 16px #d0cde1;
+	border: 0;
+	box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+		0 1px 3px 1px rgba(60, 64, 67, 0.15) !important;
 }
 
 .btn:focus,
 .btn:active {
-  outline: none !important;
-  box-shadow: none !important;
+	outline: none !important;
+	box-shadow: none !important;
 }
 
 .btn {
-  border: 0;
+	border: 0;
 }
 .btn:hover {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+		0 1px 3px 1px rgba(60, 64, 67, 0.15) !important;
 }
 
 input:focus,
 input:active {
-  outline: none !important;
-  box-shadow: none !important;
-  /* border: 2px solid #348afc !important; */
+	outline: none !important;
+	box-shadow: none !important;
+	/* border: 2px solid #348afc !important; */
 }
 
 /* .modal-content {
@@ -59,5 +36,5 @@ input:active {
 } */
 
 .navSm {
-  display: none;
+	display: none;
 }
